--- a/products_page.html
+++ b/products_page.html
@@ -13,22 +13,26 @@
     <!-- Add carousel styles -->
     <style>
         .carousel-item img {
-            object-fit: cover;
+            object-fit: contain;
             width: 100%;
-            height: 400px; /* Fixed height for consistent image size */
+            height: 400px;
             max-height: 100%;
         }
 
         @media (max-width: 768px) {
             .carousel-item img {
-                height: 300px; /* Smaller height for mobile devices */
+                height: 300px;
             }
         }
 
         @media (min-width: 1200px) {
             .carousel-item img {
-                height: 500px; /* Larger height for large screens */
+                height: 500px;
             }
+        }
+
+        .carousel-inner {
+            background-color: #f5f5f5;
         }
 
         .product-section {
