--- a/about_us.html
+++ b/about_us.html
@@ -52,7 +52,7 @@
             <p>To be Kenya’s most trusted electronics retailer, recognized for our service excellence and product variety.</p>
 
             <h2 class="fw-bolder mt-5 mb-4">Meet the Team</h2>
-            <p>Our dedicated team of experts is here to help you with all your electronic needs.</p>
+            <p>Our dedicated team of experts is here to help you with all your electronic needs.Dont be Afraid. Kuuliza ni Bure</p>
         </div>   
     </section>
 
@@ -62,7 +62,7 @@
             <p class="m-0 text-center text-white">Copyright &copy; Babito Technologies 2024</p>
         </div>
     </footer>
-
+     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS -->
