--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                         <img src="img/smartphone2.jpg" class="d-block w-100" alt="Smartphone">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Smartphones</h5>
+                            <h5>Smartphones</h5>
                             <p>Latest smartphones from top brands.</p>
                         </div>
                     </div>
@@ -184,5 +185,5 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>
-
+    
 </html>
