--- a/products_page.html
+++ b/products_page.html
@@ -142,6 +142,14 @@
                         </div>  
                         <div class="carousel-item">
                             <img src="img/laptop3.jpg" class="d-block w-100" alt="Laptop 3">
+                        </div><div class="carousel-item">
+                            <img src="img/laptop4.jpg" class="d-block w-100" alt="Laptop 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/laptop5.jpg" class="d-block w-100" alt="Laptop 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/laptop6.jpg" class="d-block w-100" alt="Laptop 3">
                         </div>
                         <!-- Continue with all laptop images up to laptop9 -->
                         <!-- Continue with all laptop images up to laptop9 -->
@@ -155,7 +163,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-            </div>
+            </div>   
 
             <!-- Cameras Section -->
             <div class="product-section">
